# POO-2025

./: CmakeLists.txt  multi-projects.code-workspace
mi-proyecto/: CMakeLists.txt  README.md  main  main.cpp
mi-proyecto/include/: Baloncesto.h  Deportista.h  Futbol.h  Natacion.h
mi-proyecto/src/: Baloncesto.cpp  Futbol.cpp  Natacion.cpp  main.cpp
